# padi

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.docker/postgres/: init.sql
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/migrations/: 0000_create_functions.sql  0001_create_organizations.sql  0002_create_users.sql  0003_create_organization_members.sql  0004_create_contacts.sql  0005_create_companies.sql  0006_create_contact_companies.sql  0007_create_pipelines_and_stages.sql  0008_create_deals.sql  0009_create_tasks.sql  0010_create_communications.sql  0011_create_message_templates.sql  0012_create_invoices.sql  0013_create_payments.sql  0014_create_audit_logs.sql  0015_create_settings.sql  0016_create_indexes.sql
backend/src/: app.rs  cache.rs  config.rs  db.rs  errors.rs  main.rs
backend/src/middleware/: rate_limit.rs
backend/src/routes/: health.rs
docs/: TRD.md
docs/epics/: E1-foundation.md
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/kotlin/com/padi/mobile/: MainActivity.kt
mobile/ios/Runner.xcodeproj/: project.pbxproj
web/: package.json  pnpm-lock.yaml
